--- a/pythonsd/templates/pythonsd/index.html
+++ b/pythonsd/templates/pythonsd/index.html
@@ -20,7 +20,7 @@
       <div>
         <h2>About us</h2>
         <p>San Diego Python is a group for those interested in learning about Python or connecting with other Python professionals. We have a smaller weekly meetup for people to work on Python projects and a larger monthly meetup on the 4th Thursday of the month with speakers and talks.</p>
-        <p>Join us on <a href="https://www.meetup.com/pythonsd/">Meetup</a> to stay up to date with our upcoming events!</p>
+        <p>Join us on <a href="https://www.meetup.com/pythonsd/" rel="nofollow noopener noreferrer">Meetup</a> to stay up to date with our upcoming events!</p>
       </div>
 
       <div>
