--- a/assets/src/input.css
+++ b/assets/src/input.css
@@ -40,3 +40,12 @@
 
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .btn {
+    @apply inline-flex items-center justify-center border align-middle select-none font-medium text-center hover:no-underline focus:no-underline focus:shadow-none text-sm py-2 px-4 shadow-sm hover:shadow-md bg-transparent hover:bg-slate-700 text-slate-700 hover:text-white rounded;
+    svg {
+      @apply fill-current w-4 h-4 mr-2;
+    }
+  }
+}
