--- a/assets/src/input.css
+++ b/assets/src/input.css
@@ -1,4 +1,46 @@
-@tailwind base;
+@import 'tailwindcss';
+
+@utility container {
+  margin-inline: auto;
+  padding-inline: 1rem;
+  @media (width >= theme(--breakpoint-sm)) {
+    padding-inline: 2rem;
+  }
+  @media (width >= theme(--breakpoint-lg)) {
+    padding-inline: 4rem;
+  }
+  @media (width >= theme(--breakpoint-xl)) {
+    padding-inline: 6rem;
+  }
+  @media (width >= theme(--breakpoint-2xl)) {
+    padding-inline: 12rem;
+  }
+}
+
+/*
+  The default border color has changed to `currentColor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentColor);
+  }
+}
+
+@utility btn {
+  @apply inline-flex items-center justify-center border align-middle select-none font-medium text-center hover:no-underline focus:no-underline focus:shadow-none text-sm py-2 px-4 shadow-xs hover:shadow-md bg-transparent hover:bg-slate-700 text-slate-700 hover:text-white rounded-sm;
+  svg {
+    @apply fill-current w-4 h-4 mr-2;
+  }
+}
 
 /* https://tailwindcss.com/docs/preflight#extending-preflight */
 /* https://tailwindcss.com/docs/adding-custom-styles#adding-base-styles */
@@ -35,17 +77,5 @@
   ul,
   pre {
     @apply mb-4;
-  }
-}
-
-@tailwind components;
-@tailwind utilities;
-
-@layer components {
-  .btn {
-    @apply inline-flex items-center justify-center border align-middle select-none font-medium text-center hover:no-underline focus:no-underline focus:shadow-none text-sm py-2 px-4 shadow-sm hover:shadow-md bg-transparent hover:bg-slate-700 text-slate-700 hover:text-white rounded;
-    svg {
-      @apply fill-current w-4 h-4 mr-2;
-    }
   }
 }
